# mnesic

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
benchmarks/: main.cpp
cmake/: catch2.cmake
examples/: CMakeLists.txt  collatz.cpp  memoize_free_function.cpp  memoize_functor.cpp  memoize_lambda.cpp  memoize_recursive_free_function.cpp  memoize_recursive_function.cpp  xmake.lua
mnesic/: memoized.hpp
mnesic/detail/: function_traits.hpp  tuple_hash.hpp
src/mnesic/: memoized.hpp
src/mnesic/detail/: lru_cache.hpp  tuple_hash.hpp
test/: CMakeLists.txt  memoized_tests.cpp
tests/: memoized_tests.cpp
